Character Creation Page Styling, Room Functionalit for both Gm and simple user

--- a/index.ejs
+++ b/index.ejs
@@ -41,6 +41,10 @@
 <script src="js/controllers/characterCreationCtrl.js"></script>
 <script src="js/controllers/userPageCtrl.js"></script>
 
+<script src="js/controllers/characterCreationService.js"></script>
+
+
+
 
 <body ng-app="etrilco" ng-cloak>
 
