--- a/public/css/characterCreation.css
+++ b/public/css/characterCreation.css
@@ -1,4 +1,7 @@
-.select-class-row [class^='col-'] {
+.character-creation-page {
+    background: #42403d
+}
+.select-class-row [class^='col'] {
     text-align: center;
 }
 .select-class-row .z-index:hover {
@@ -14,4 +17,13 @@
     filter: none;
     transform: scale(1.5);
     z-index: 1;
+}
+.choose-class-btn {
+    background: #bb843e;
+    color: #42403d;
+    border: none;
+    border-radius: 4px;
+    width: 400px;
+    padding: 1.25rem 0;
+    margin: 3rem auto 0 !important;
 }
