--- a/public/views/home.html
+++ b/public/views/home.html
@@ -1,11 +1,11 @@
 <div class="homepage">
     <div class="container height-100vh">
-        <div class="row">
-            <div class="col">
-                <img src="/images/ETmaps.jpg" alt="" class="img-fluid">
+        <div class="row my-5">
+            <div class="col text-center">
+                <img src="/images/Etril_Logo.png" alt="" class="img-fluid">
             </div>
         </div>
-        <div class="row d-flex justify-content-center mt-3">
+        <div class="row d-flex justify-content-center mt-5">
             <button class="btn btn-outline mr-3" data-toggle="modal" data-target="#loginModal">Log In</button>
             <button class="btn btn-fill" data-toggle="modal" data-target="#registerModal">Sign Up</button>
             <!-- test {{user.username}} -->
@@ -29,11 +29,13 @@
                     <form ng-submit="login(data)">
                         <div class="form-group">
                             <label>Username</label>
-                            <input type="text" class="form-control" placeholder="Username" ng-model="data.username" required>
+                            <input type="text" class="form-control" placeholder="Username" ng-model="data.username"
+                                required>
                         </div>
                         <div class="form-group">
                             <label>Password</label>
-                            <input type="password" class="form-control" placeholder="Password" ng-model="data.password" required>
+                            <input type="password" class="form-control" placeholder="Password" ng-model="data.password"
+                                required>
                         </div>
                         <button type="submit" class="btn btn-fill float-right">Log In</button>
                     </form>
@@ -44,7 +46,8 @@
     </div>
 
     <!-- Modal -->
-    <div class="modal fade" id="registerModal" tabindex="-1" role="dialog" aria-labelledby="registerModalLabel" aria-hidden="true">
+    <div class="modal fade" id="registerModal" tabindex="-1" role="dialog" aria-labelledby="registerModalLabel"
+        aria-hidden="true">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
@@ -60,11 +63,13 @@
                     <form ng-submit="registerUser(data)">
                         <div class="form-group">
                             <label>Username</label>
-                            <input type="text" class="form-control" ng-model="data.username" placeholder="Enter username" required>
+                            <input type="text" class="form-control" ng-model="data.username" placeholder="Enter username"
+                                required>
                         </div>
                         <div class="form-group">
                             <label>Password</label>
-                            <input type="password" class="form-control" ng-model="data.password" placeholder="Password" required>
+                            <input type="password" class="form-control" ng-model="data.password" placeholder="Password"
+                                required>
                         </div>
                         <!-- <div class="form-group">
                             <label>Repeat Password</label>
@@ -74,11 +79,13 @@
                             <label>Usertype </label>
                             <br>
                             <div class="form-check form-check-inline">
-                                <input class="form-check-input" type="radio" ng-model="data.type" name="userType" value="GM" required>
+                                <input class="form-check-input" type="radio" ng-model="data.type" name="userType" value="GM"
+                                    required>
                                 <label class="form-check-label" for="inlineRadio1">GM</label>
                             </div>
                             <div class="form-check form-check-inline">
-                                <input class="form-check-input" type="radio" ng-model="data.type" name="userType" value="Simple User" required>
+                                <input class="form-check-input" type="radio" ng-model="data.type" name="userType" value="Simple User"
+                                    required>
                                 <label class="form-check-label" for="inlineRadio2">Player</label>
                             </div>
                         </div>
