--- a/public/views/home.html
+++ b/public/views/home.html
@@ -79,13 +79,13 @@
                             <label>Usertype </label>
                             <br>
                             <div class="form-check form-check-inline">
-                                <input class="form-check-input" type="radio" ng-model="data.type" name="userType" value="GM"
-                                    required>
+                                <input class="form-check-input" type="radio" ng-model="data.userType" name="userType"
+                                    value="GM" required>
                                 <label class="form-check-label" for="inlineRadio1">GM</label>
                             </div>
                             <div class="form-check form-check-inline">
-                                <input class="form-check-input" type="radio" ng-model="data.type" name="userType" value="Simple User"
-                                    required>
+                                <input class="form-check-input" type="radio" ng-model="data.userType" name="userType"
+                                    value="Simple User" required>
                                 <label class="form-check-label" for="inlineRadio2">Player</label>
                             </div>
                         </div>
