--- a/index.ejs
+++ b/index.ejs
@@ -13,12 +13,13 @@
         crossorigin="anonymous">
 
     <link href="https://fonts.googleapis.com/css?family=Amatic+SC:400,700|Kaushan+Script" rel="stylesheet">
-
+    <link href="https://fonts.googleapis.com/css?family=Comfortaa:300,400,700&amp;subset=greek" rel="stylesheet">
     <title>Etrilco</title>
 </head>
 
 <!-- Css -->
 <link rel="stylesheet" href="css/main.css">
+<link rel="stylesheet" href="css/alerts.css">
 <link rel="stylesheet" href="css/buttons.css">
 <link rel="stylesheet" href="css/homepage.css">
 <link rel="stylesheet" href="css/userpage.css">
@@ -40,6 +41,9 @@
 <script src="js/controllers/roomCtrl.js"></script>
 <script src="js/controllers/characterCreationCtrl.js"></script>
 <script src="js/controllers/userPageCtrl.js"></script>
+<script src="js/controllers/createRoomCtrl.js"></script>
+
+
 
 <script src="js/controllers/characterCreationService.js"></script>
 
