--- a/public/views/room-page.html
+++ b/public/views/room-page.html
@@ -1,16 +1,32 @@
-<div class="container">
+<div class="container-fluid room-page">
     <div class="row">
-        <div class="col">
-            <h5>Room Code: {{roomCode}}</h5>
-
-        </div>
-    </div>
-    <div class="row">
-        <div class="col">
-            <h5>List Of Players</h5>
-            <ul class="list-group" ng-repeat="player in roomData.players">
-                <a ng-href="/room/{{room.roomCode}}" class="list-group-item">{{player.id}}</a>
+        <div class="col sidebar">
+            <img src="/images/Etril_Logo_minimal.png" alt="Etril Co" class="logo img-fluid">
+            <ul class="list-unstyled">
+                <li ng-click="view = 'cs'">Etril CS</li>
+                <li ng-click="view = 'maps'">Etril Maps</li>
+                <!-- <li ng-click="page = 'join-room'">Join Existing Room</li> -->
             </ul>
         </div>
+        <div class="col main-content">
+            <div class="row">
+                <div class="col top-bar">
+                    <div>Welcome back {{user.username}}</div>
+                    <div>You haven't joined any room yet </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col page-col wrapper">
+                    <div class="position-relative">
+                        <div ng-if="userType === 'GM'" ng-include="'/views/components/room-page/gm-room-view.html'">
+
+                        </div>
+                        <div ng-if="userType !== 'GM'" ng-include="'/views/components/room-page/user-room-view.html'">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
+
 </div>
