--- a/public/views/user-page.html
+++ b/public/views/user-page.html
@@ -68,6 +68,7 @@
             <ul class="list-unstyled">
                 <li>Etril CS</li>
                 <li>Etril Maps</li>
+                <li ng-click="logoutUser()">Logout</li>
                 <!-- <li ng-click="page = 'join-room'">Join Existing Room</li> -->
             </ul>
         </div>
